add texts to home . txt

--- a/site/blueprints/pages/default.yml
+++ b/site/blueprints/pages/default.yml
@@ -17,6 +17,36 @@ columns:
             label: Title Append
             type: text
           
+          
+          # section 2
+          section2_text1:
+            label: Section 2 Text 1
+            type: text
+          section2_text2:
+            label: Section 2 Text 2
+            type: text
+          section2_text3:
+            label: Section 2 Text 3
+            type: text
+          section2_text4:
+            label: Section 2 Text 4
+            type: text
+          section2_text5:
+            label: Section 2 Text 5
+            type: text
+          
+          # section4
+          section4_text1:
+            label: Section 4 Text 1
+            type: text
+          section4_text2:
+            label: Section 4 Text 2
+            type: text
+          section4_text3:
+            label: Section 4 Text 3
+            type: text
+
+# section5
           section5_text1:
             label: Section 5 Text 1
             type: text
@@ -25,6 +55,10 @@ columns:
             type: text
           section5_text3:
             label: Section 5 Text 3
+            type: text
+
+          section5_text4:
+            label: Section 5 Text 4
             type: text
   sidebar:
     width: 1/3
